--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             
             <div class="info-item">
                 <span class="icon">💰</span>
-                <p><strong>PIX:</strong> 123.456.789-00 (CPF da Organiza&ccedil;&atilde;o)</p>
+                <p><strong>PIX:</strong> 11 94077-0217 (Celular do Rogerio)</p>
             </div>
             
             <div class="info-item">
@@ -134,5 +134,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
