--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             
             <div class="info-item">
                 <span class="icon">📍</span>
-                <p><strong>Endereço:</strong> Rua dos Eventos, 456 - Salão de Festas do Condomínio</p>
+                <p><strong>Endereço:</strong> ? </p>
             </div>
             
             <div class="info-item">
@@ -134,6 +134,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
