--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="container">
         <header>
-            <h1>CHURRASCO COM AMIGO SECRETO 🎁</h1>
+            <h1>CONFRATERNIZAÇÃO - AMIGOS DO WANDA</h1>
             <p class="id-festa">ID: uzppMbpJjucjqzJEZQLNZKHSVcI2</p>
         </header>
 
@@ -134,6 +134,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
