--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <header>
             <h1>CONFRATERNIZAÇÃO - AMIGOS DO WANDA</h1>
+            <h1>Confirme sua presença!</h1>
             <p class="id-festa">ID: uzppMbpJjucjqzJEZQLNZKHSVcI2</p>
         </header>
 
@@ -134,6 +135,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
