--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <div class="container">
         <header>
             <h1>CONFRATERNIZAÇÃO - AMIGOS DO WANDA</h1>
-         <p class="id-festa">ID: uzppMbpJjucjqzJEZQLNZKHSVcI2</p>
-        </header>
+         </header>
 
         <section class="detalhes">
             <h2>Detalhes da Festa</h2>
@@ -105,12 +104,14 @@
                 </ul>
             <p>Participarão do Amigo Secreto: <span id="total-amigo-secreto">0</span></p>
         </section>
+        
+        <div class="footer-id">
+             ID da Festa: uzppMbpJjucjqzJEZQLNZKHSVcI2
+        </div>
 
     </div>
 
-<!-- INCLUSÃO DO FIREBASE -->
-    <!-- Continuamos usando a versão 8.10.0 pois ela é mais simples para HTML puro -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script>
         // *** SUA CONFIGURAÇÃO REAL DO FIREBASE ***
@@ -134,12 +135,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
